# silkenweb

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  README.tmpl.md  Tasks.md  check  ci-check.sh  docker-check  release.sh  rustfmt.toml
.github/workflows/: checks.yml  ci-tests.yml  github-pages.yml  main.yml  netlify.yml  rust-env.yml  tauri-tests.yml  tests.yml  website.yml
crates/core/: Cargo.toml
crates/core/src/: accumulators.rs  hooks.rs  lib.rs  memo.rs
crates/core/src/hooks/: list_state.rs  memo.rs  reference.rs  state.rs
crates/dom/: Cargo.toml
crates/dom/src/: animation.rs  attribute.rs  document.rs  element.rs  element_list.rs  global.rs  hooks.rs  hydration.rs  lib.rs  macros.rs  node.rs  render.rs  router.rs  storage.rs
crates/dom/src/element/: child_groups.rs  child_vec.rs  deferred.rs  dom.rs  dom_children.rs  eval.rs  event.rs  hydration.rs  lazy.rs  strict.rs
crates/dom/src/element/dom/: real.rs  virt.rs  wet.rs
crates/dom/src/hooks/: list_state.rs
crates/dom/src/hydration/: node.rs
crates/dom/src/hydration/dom/: dry.rs
crates/dom/src/hydration/node/: dry.rs  wet.rs
crates/dom/src/node/: element.rs
crates/dom/src/node/element/: child_groups.rs  child_vec.rs  optional_children.rs
crates/dom/tests/: integration.rs
crates/elements/: Cargo.toml
crates/examples/todomvc/: Cargo.toml  index.html  install-cypress.sh  run-cypress-tests.sh
crates/examples/todomvc/cypress-tests/: README.md  cypress.json  package-lock.json  package.json
crates/examples/todomvc/src/: main.rs
crates/exe/: Cargo.toml  index.html
crates/exe/src/: main.rs
crates/html/: Cargo.toml
crates/html/src/: elements.rs  html.rs  lib.rs  macros.rs
crates/html/src/elements/: svg.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/reactive/: Cargo.toml
crates/reactive/src/: accumulators.rs  containers.rs  hooks.rs  lib.rs  memo.rs  signal.rs
crates/reactive/tests/: accumulators.rs  memo.rs  signal.rs
crates/reactive/tests/common/: mod.rs
crates/signals-ext/: Cargo.toml
crates/signals-ext/src/: lib.rs
crates/silkenweb/: Cargo.toml
crates/silkenweb/src/: animation.rs  lib.rs  router.rs  storage.rs
crates/silkenweb/tests/: integration.rs
crates/silkenweb/tests/element/: mod.rs
crates/silkenweb/tests/hydration/: mod.rs
crates/surfinia/: Cargo.toml
crates/ui5/: Cargo.toml
crates/xtask/: Cargo.toml
editors/: README.md
editors/vscode/: settings.json
examples/animation/: Cargo.toml  index.html
examples/animation/src/: main.rs
examples/app-state/: Cargo.toml
examples/app-state/src/: app.rs  drive.rs  lib.rs  main.rs  page.tmpl.html  readme.md  state.rs  test_utils.rs  value.rs
examples/async-http-request/: Cargo.toml  index.html
examples/bootstrap/: Cargo.toml  index.html
examples/canvas/: Cargo.toml  canvas.css  index.html
examples/canvas/src/: main.rs
examples/client-server/: Cargo.toml  README.md  index.html
examples/client-server/src/: api.rs  client.rs  main.rs
examples/component/: Cargo.toml  index.html
examples/counter/: Cargo.toml  index.html
examples/counter-list/: Cargo.toml  index.html
examples/css-modules/: Cargo.toml  green.css  index.html  red.css  stylesheet.css
examples/drag-and-drop/: Cargo.toml  index.html  style.css
examples/drag-and-drop/src/: main.rs
examples/element-handle/: Cargo.toml  index.html
examples/hackernews-clone/: Cargo.toml  hackernews.css  hackernews.scss  index.html
examples/hackernews-clone/src/: main.rs
examples/hello-world/: Cargo.toml  index.html
examples/htmx-axum/: Cargo.toml  README.md  index.html
examples/htmx-axum/src/: main.rs
examples/hydration/: Cargo.toml  index.html
examples/js-framework-benchmark/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  trunk-target.html  webpack.config.js
examples/js-framework-benchmark/src/: lib.rs  main.rs
examples/ssr-full/: Cargo.toml  README.md
examples/tauri/: .gitignore  Cargo.toml  README.md
examples/tauri/frontend/: Cargo.toml  index.html
examples/tauri/frontend/src/: main.rs
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/src/: lib.rs  main.rs
examples/testing/: Cargo.toml
examples/testing/src/: lib.rs
examples/timers/: Cargo.toml  index.html
examples/timers/src/: main.rs
examples/todomvc/: Cargo.toml  Trunk.toml  index.html  install-cypress.sh  run-cypress-tests.sh
examples/todomvc/benches/: ssr.rs
examples/todomvc/cypress/: cypress.config.js  package-lock.json  package.json
examples/todomvc/cypress-tests/: README.md  package-lock.json  package.json
examples/todomvc/cypress-tests/cypress/integration/: app_spec.js
examples/todomvc/cypress/cypress/support/: commands.js  index.d.ts
examples/todomvc/e2e/: cypress.config.js  package-lock.json  package.json
examples/todomvc/e2e/cypress/e2e/: app.cy.js
examples/todomvc/e2e/cypress/integration/: app_spec.js
examples/todomvc/e2e/cypress/support/: e2e.js
examples/todomvc/playwright/: README.md  package-lock.json  package.json  playwright.config.ts
examples/todomvc/playwright/tests/: integration.spec.ts
examples/todomvc/src/: app_model.rs  app_view.rs  item_model.rs  item_view.rs  main.rs  model.rs  view.rs
examples/ui5-showcase/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  webpack.config.js
examples/ui5-showcase/js/: index.js
examples/ui5-showcase/src/: lib.rs  main.rs
examples/ui5-showcase/static/: index.html  styles.css
examples/ui5-showcase/ui5-bundler/: Makefile  main.js  package-lock.json  package.json  vite.config.js
examples/web-components-wrapper/: Cargo.toml  README.md  Trunk.toml  index.html
examples/web-components-wrapper/js-bundler/: Makefile  main.js  package-lock.json  package.json  vite.config.js
examples/web-components-wrapper/src/: lib.rs  main.rs
examples/web-components-wrapper/ui5-bundler/: main.js  package-lock.json  package.json
scripts/: install-ci-runtime.sh  install-wasm-tools.sh  local-ci.sh
tutorial/: book.toml
(+116 files in other folders)
