[workspace]
resolver = "2"
members = ["packages/*", "examples/*"]
exclude = ["examples/ssr-full", "examples/tauri"]

[profile.dev]
# Debug info isn't useful most of the time. It slows down builds and uses up disk space.
# Disk space is particularly a problem for CI builds.
debug = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[profile.bench]
opt-level = 3

[workspace.package]
# The version is used by all published crates however it is not updated for the
# internal silkenweb dependencies where it has to be updated manually.
version = "0.7.0"

[workspace.dependencies]

# Local dependencies
silkenweb = { path = "packages/silkenweb", version = "0.7.0" }
silkenweb-base = { path = "packages/base", version = "0.7.0" }
silkenweb-css = { path = "packages/css", version = "0.7.0" }
silkenweb-signals-ext = { path = "packages/signals-ext", version = "0.7.0" }
silkenweb-macros = { path = "packages/macros", version = "0.7.0" }
silkenweb-task = { path = "packages/task", version = "0.7.0" }
silkenweb-tauri-proc-macro = { path = "packages/tauri-proc-macro", version = "0.7.0" }
silkenweb-test = { path = "packages/test", version = "0.7.0" }

anyhow = "1.0.75"
arpy = "0.2.0"
arpy-axum = "0.2.0"
arpy-reqwasm = "0.2.0"
arpy-server = "0.2.0"
async-recursion = "1.0.0"
async-trait = "0.1.66"
axum = "0.6.10"
caseless = "0.2.1"
chrono = "0.4.19"
clap = "4.1.8"
clonelet = "0.2.0"
console_error_panic_hook = "0.1.7"
criterion = { version = "0.5.1", default-features = false }
crossbeam = "0.8.2"
cssparser = "0.31.2"
derive_more = "0.99.17"
discard = "1.0.4"
duct = "0.13.5"
futures = "0.3.24"
futures-signals = { version = "0.3.31", default-features = false, features = [
    "debug",
] }
getrandom = "0.2.7"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
# Grass enables a commandline parser by default, which pulls in `clap`
grass = { version = "0.13.1", default-features = false, features = ["random"] }
heck = "0.4.0"
html-escape = "0.2.9"
indexmap = "2.0.0"
itertools = "0.11.0"
js-sys = "0.3.60"
lightningcss = "=1.0.0-alpha.50"
num-traits = "0.2.15"
parse-display = "0.8.0"
parcel_selectors = "=0.26.4"
paste = "1.0.9"
pin-project = "1.0.12"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.15"
rand = "0.8.5"
reqwasm = "0.5.0"
scopeguard = "1.1.0"
serde = "1.0.154"
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
serde-wasm-bindgen = "0.5.0"
silkenweb-bootstrap = { path = "packages/bootstrap" }
silkenweb-bootstrap-macros = { path = "packages/bootstrap/macros" }
silkenweb-htmx-axum = { path = "packages/htmx-axum" }
static_assertions = "1.1.0"
syn = "2.0.26"
thiserror = "1.0.47"
timeago = "0.4.1"
tokio = "1.25.0"
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trybuild = "1.0.76"
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.28"
web-log = "1.0.1"
web-sys = "0.3.60"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
