[workspace]
resolver = "2"
members = ["packages/*", "examples/*"]
exclude = ["examples/ssr-full", "examples/tailwind", "examples/tauri"]

[profile.dev]
# Debug info isn't useful most of the time. It slows down builds and uses up disk space.
# Disk space is particularly a problem for CI builds.
debug = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[profile.bench]
opt-level = 3

[workspace.package]
# The version is used by all published crates however it is not updated for the
# internal silkenweb dependencies where it has to be updated manually.
version = "0.9.0"

[workspace.dependencies]

# Local dependencies
silkenweb = { path = "packages/silkenweb", version = "0.9.0" }
silkenweb-base = { path = "packages/base", version = "0.9.0" }
silkenweb-css = { path = "packages/css", version = "0.9.0" }
silkenweb-signals-ext = { path = "packages/signals-ext", version = "0.9.0" }
silkenweb-macros = { path = "packages/macros", version = "0.9.0" }
silkenweb-task = { path = "packages/task", version = "0.9.0" }
silkenweb-tauri-proc-macro = { path = "packages/tauri-proc-macro", version = "0.9.0" }
silkenweb-parse = { path = "packages/parse", version = "0.9.0" }
silkenweb-inline-html = { path = "packages/inline-html", version = "0.9.0" }
silkenweb-test = { path = "packages/test", version = "0.9.0" }

anyhow = "1.0.95"
arpy = "0.2.0"
arpy-axum = "0.2.0"
arpy-reqwasm = "0.2.0"
arpy-server = "0.2.0"
async-recursion = "1.1.1"
async-trait = "0.1.85"
axum = "0.6.2"
caseless = "0.2.2"
chrono = "0.4.39"
clap = "4.5.26"
clonelet = "0.2.0"
console_error_panic_hook = "0.1.7"
criterion = { version = "0.5.1", default-features = false }
crossbeam = "0.8.4"
cssparser = "0.34.0"
derive_more = "1.0.0"
discard = "1.0.4"
duct = "0.13.7"
ego-tree = "0.10.0"
futures = "0.3.31"
futures-signals = { version = "0.3.34", default-features = false, features = [
    "debug",
] }
getrandom = "0.2.15"
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
# Grass enables a commandline parser by default, which pulls in `clap`
grass = { version = "0.13.4", default-features = false, features = ["random"] }
heck = "0.5.0"
html-escape = "0.2.13"
html5ever = "0.29.0"
include-doc = "0.2.2"
indexmap = "2.7.0"
itertools = "0.14.0"
js-sys = "0.3.76"
lightningcss = "=1.0.0-alpha.55"
num-traits = "0.2.19"
parcel_selectors = "=0.26.4"
paste = "1.0.15"
pin-project = "1.1.8"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rand = "0.8.5"
reqwasm = "0.5.0"
scopeguard = "1.2.0"
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.135"
serde_urlencoded = "0.7.1"
serde-wasm-bindgen = "0.6.5"
silkenweb-bootstrap = { path = "packages/bootstrap" }
silkenweb-bootstrap-macros = { path = "packages/bootstrap/macros" }
silkenweb-htmx-axum = { path = "packages/htmx-axum" }
static_assertions = "1.1.0"
strum = "0.27.1"
syn = "2.0.96"
thiserror = "2.0.11"
timeago = "0.4.2"
tokio = "1.44.2"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trybuild = "1.0.101"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
wasm-bindgen-test = "0.3.49"
wasm-rs-dbg = "0.1.2"
web-log = "1.0.1"
web-sys = "0.3.76"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
