[package]
name = "surfinia-core"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.73"
num-traits = "0.2"

# TODO: Most of these depednencies are for surfinia-html
[dependencies.web-sys]
version = "0.3"
features = [
    "Attr",
    "CharacterData",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlHeadingElement",
    "HtmlLabelElement",
    "HtmlUListElement",
    "HtmlLiElement",
    "HtmlSpanElement",
    "HtmlHeadElement",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "NamedNodeMap",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "AnimationEvent",
    "AnimationEventInit",
    "BlobEvent",
    "BlobEventInit",
    "CloseEvent",
    "CloseEventInit",
    "CompositionEvent",
    "CompositionEventInit",
    "CustomEvent",
    "CustomEventInit",
    "DeviceMotionEvent",
    "DeviceMotionEventInit",
    "DeviceOrientationEvent",
    "DeviceOrientationEventInit",
    "DragEvent",
    "DragEventInit",
    "ErrorEvent",
    "ErrorEventInit",
    "Event",
    "EventInit",
    "FetchEvent",
    "FetchEventInit",
    "FocusEvent",
    "FocusEventInit",
    "GamepadEvent",
    "GamepadEventInit",
    "HashChangeEvent",
    "HashChangeEventInit",
    "IdbVersionChangeEvent",
    "IdbVersionChangeEventInit",
    "InputEvent",
    "InputEventInit",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MessageEvent",
    "MessageEventInit",
    "MouseEvent",
    "MouseEventInit",
    "NotificationEvent",
    "NotificationEventInit",
    "OfflineAudioCompletionEvent",
    "OfflineAudioCompletionEventInit",
    "PageTransitionEvent",
    "PageTransitionEventInit",
    "PointerEvent",
    "PointerEventInit",
    "PopStateEvent",
    "PopStateEventInit",
    "ProgressEvent",
    "ProgressEventInit",
    "PushEvent",
    "PushEventInit",
    "SpeechRecognitionEvent",
    "SpeechRecognitionEventInit",
    "SpeechSynthesisEvent",
    "SpeechSynthesisEventInit",
    "SpeechSynthesisErrorEvent",
    "SpeechSynthesisErrorEventInit",
    "StorageEvent",
    "StorageEventInit",
    "TouchEvent",
    "TouchEventInit",
    "TransitionEvent",
    "TransitionEventInit",
    "UiEvent",
    "UiEventInit",
    "UserProximityEvent",
    "UserProximityEventInit",
    "WheelEvent",
    "WheelEventInit",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "HtmlInputElement",
    "console",
]
