[package]
name = "silkenweb-dom"
version = "0.1.1"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
description = "Silkenweb DOM API"
readme = "../../README.md"
homepage = "https://github.com/silkenweb/silkenweb"
repository = "https://github.com/silkenweb/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "web", "html", "browser", "dom"]

[dependencies]
wasm-bindgen = "0.2.78"
futures-signals = "0.3"
discard = "1.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Text",
    "Element",
    "HtmlInputElement",
    "Storage",
    "Location",
    "History",
    "Url",
]
