[package]
name = "silkenweb-dom"
version = "0.1.3"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"
description = "Silkenweb DOM API"
readme = "../../README.md"
homepage = "https://github.com/silkenweb/silkenweb"
repository = "https://github.com/silkenweb/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "web", "html", "browser", "dom"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
wasm-bindgen = "0.2.73"
num-traits = "0.2"
silkenweb-reactive = "0.1.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Text", "Element", "HtmlInputElement"]
