[package]
name = "exe"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"

[dependencies]
lib = { path = "../lib" }
web-log="1.0"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    
    "Attr",
    "CharacterData",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlHeadElement",
    "NamedNodeMap",
    "Node",
    "NodeList",
    "Text",
    "Window",
    
    "AnimationEvent",
    "AnimationEventInit",
    "BlobEvent",
    "BlobEventInit",
    "CloseEvent",
    "CloseEventInit",
    "CompositionEvent",
    "CompositionEventInit",
    "CustomEvent",
    "CustomEventInit",
    "DeviceMotionEvent",
    "DeviceMotionEventInit",
    "DeviceOrientationEvent",
    "DeviceOrientationEventInit",
    "DragEvent",
    "DragEventInit",
    "ErrorEvent",
    "ErrorEventInit",
    "Event",
    "EventInit",
    "FetchEvent",
    "FetchEventInit",
    "FocusEvent",
    "FocusEventInit",
    "GamepadEvent",
    "GamepadEventInit",
    "HashChangeEvent",
    "HashChangeEventInit",
    "IdbVersionChangeEvent",
    "IdbVersionChangeEventInit",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MessageEvent",
    "MessageEventInit",
    "MouseEvent",
    "MouseEventInit",
    "NotificationEvent",
    "NotificationEventInit",
    "OfflineAudioCompletionEvent",
    "OfflineAudioCompletionEventInit",
    "PageTransitionEvent",
    "PageTransitionEventInit",
    "PointerEvent",
    "PointerEventInit",
    "PopStateEvent",
    "PopStateEventInit",
    "ProgressEvent",
    "ProgressEventInit",
    "PushEvent",
    "PushEventInit",
    "SpeechRecognitionEvent",
    "SpeechRecognitionEventInit",
    "SpeechSynthesisEvent",
    "SpeechSynthesisEventInit",
    "SpeechSynthesisErrorEvent",
    "SpeechSynthesisErrorEventInit",
    "StorageEvent",
    "StorageEventInit",
    "TouchEvent",
    "TouchEventInit",
    "TransitionEvent",
    "TransitionEventInit",
    "UiEvent",
    "UiEventInit",
    "UserProximityEvent",
    "UserProximityEventInit",
    "WheelEvent",
    "WheelEventInit",
    
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    
    "HtmlInputElement",
] # TODO these are for examples only, move them there
