[package]
name = "surfinia-html"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"

[dependencies]
surfinia-core = { path = "../core" }
paste = "1.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMenuElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
]
