[package]
name = "silkenweb-html"
version = "0.1.1"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"
description = "Silkenweb HTML types"
readme = "../../README.md"
homepage = "https://github.com/silkenweb/silkenweb"
repository = "https://github.com/silkenweb/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "web", "html", "browser", "dom"]

[dependencies]
silkenweb-dom = "0.1.1"
paste = "1.0"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
version = "0.3"
features = [
    "FocusEvent",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",

    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMenuElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
]
