[package]
name = "silkenweb-reactive"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"
description = "Silkenweb reactive primitives"
readme = "../../README.md"
homepage = "https://github.com/simon-bourne/silkenweb"
repository = "https://github.com/simon-bourne/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "dataflow", "dependency", "graph"]

[dependencies]
num-traits = "0.2"
