[package]
name = "silkenweb"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"
description = "A library for building single page web apps"
readme = true
homepage = "https://github.com/simon-bourne/silkenweb"
repository = "https://github.com/simon-bourne/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "web", "html", "browser", "dom"]

[dependencies]
silkenweb-html = { path = "../html" }
silkenweb-dom = { path = "../dom" }
silkenweb-reactive = { path = "../reactive" }
