[package]
name = "silkenweb"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2018"
description = "A library for building single page web apps"
readme = "../../README.md"
homepage = "https://github.com/simon-bourne/silkenweb"
repository = "https://github.com/simon-bourne/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "web", "html", "browser", "dom"]

[dependencies]
silkenweb-html = { path = "../html" }
silkenweb-dom = { path = "../dom" }
silkenweb-reactive = { path = "../reactive" }

[dev-dependencies]
wasm-bindgen="0.2.73"
wasm-bindgen-test= "0.3.23"
silkenweb = { path = "../silkenweb" }

[dev-dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Text", "Element", "HtmlInputElement"]
