[package]
name = "silkenweb"
version = "0.1.1"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
description = "A library for building single page web apps"
readme = "../../README.md"
homepage = "https://github.com/silkenweb/silkenweb"
repository = "https://github.com/silkenweb/silkenweb"
license = "MIT OR Apache-2.0"

categories = ["gui", "web-programming"]
keywords = ["reactive", "web", "html", "browser", "dom"]

[dependencies]
silkenweb-html = "0.1.1"
silkenweb-dom = "0.1.1"
silkenweb-signals-ext = "0.0.0"
futures-signals = "0.3"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "Location",
    "History",
    "Url",
]

[dev-dependencies]
wasm-bindgen-test= "0.3.28"
