[package]
name = "silkenweb-example-animation"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true }
futures-signals = { workspace = true }
num-traits = { workspace = true }
wasm-bindgen = { workspace = true }
