[package]
name = "app-state"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
silkenweb = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.6.1", features = ["headers"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs"] }
tokio-util = { version = "0.7.8", features = ["rt"] }
