[package]
name = "silkenweb-example-canvas"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true }
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "Touch",
    "TouchEvent",
    "TouchList",
] }
wasm-bindgen = { workspace = true }
