[package]
name = "silkenweb-example-client-server"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { path = "../../packages/silkenweb" }
futures-signals = "0.3.31"
arpy = { git = "https://github.com/simon-bourne/arpy" }
arpy-reqwasm = { git = "https://github.com/simon-bourne/arpy" }
serde = "1.0.152"
reqwasm = "0.5.0"
futures = "0.3.26"
console_error_panic_hook = "0.1.7"
tracing-subscriber = "0.3.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1.37"
axum = "0.6.4"
tokio = "1.25.0"
arpy-server = { git = "https://github.com/simon-bourne/arpy" }
arpy-axum = { git = "https://github.com/simon-bourne/arpy" }
