[package]
name = "silkenweb-example-client-server"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true }
futures-signals = { workspace = true }
arpy = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
# TODO: unify with workspace version
reqwasm = "0.5.0"
arpy-reqwasm = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
arpy-server = { workspace = true }
arpy-axum = { workspace = true }
