[package]
name = "silkenweb-example-drag-and-drop"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
gloo-console = { workspace = true }
silkenweb = { workspace = true }
web-sys = { version = "0.3.60", features = ["DataTransfer"] }
