[package]
name = "silkenweb-example-hackernews-clone"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
futures = { workspace = true }
futures-signals = { workspace = true }
reqwasm = { workspace = true }
serde = { workspace = true }
silkenweb = { workspace = true }
chrono = { workspace = true, features = ["serde", "wasmbind"] }
timeago = { workspace = true }
async-recursion = { workspace = true }
