[package]
name = "silkenweb-example-htmx-axum"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { path = "../../packages/silkenweb" }
silkenweb-htmx-axum = { path = "../../packages/htmx-axum" }
serde = "1.0.152"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum = { version = "0.6.4", features = ["headers"] }
tokio = { version = "1.25.0", features = ["full"] }
