[package]
name = "silkenweb-example-htmx-axum"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true }
silkenweb-htmx-axum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["headers"] }
tokio = { workspace = true, features = ["full"] }
