[package]
name = "silkenweb-js-framework-benchmark"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true, features = ["weak-refs"] }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true, features = ["enable-interning"] }
rand = { workspace = true, features = ["small_rng"] }
