[package]
name = "silkenweb-example-testing"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true }
silkenweb-test = { workspace = true }
futures-signals = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
