[package]
name = "silkenweb-example-timers"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { workspace = true }
futures-signals = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
