[package]
name = "silkenweb-examples-todomvc"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { path = "../../packages/silkenweb" }
silkenweb-signals-ext = { path = "../../packages/signals-ext" }
futures-signals = "0.3"
console_error_panic_hook = "0.1"
js-sys = "0.3"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
discard = "1.0"
wasm-bindgen = "=0.2.78"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
