[package]
name = "silkenweb-examples-todomvc"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
silkenweb = { path = "../../packages/silkenweb" }
silkenweb-signals-ext = { path = "../../packages/signals-ext" }
futures-signals = "0.3.31"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
derive_more = "0.99.17"
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.85"
discard = "1.0.4"
wasm-bindgen = "=0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = ["console"]
